--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bootcamp128
+spring.datasource.url=jdbc:mysql://localhost:3306/mini_hospital_apps
 spring.datasource.username=root
 spring.datasource.password=
