--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 		xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		id="Your_WebApp_ID"
 		version="2.5">
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>mini-hospital-apps</display-name>
   
   <servlet>
 			<servlet-name>dispatcher</servlet-name>
